--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch db.json -m ./node_modules/json-server-auth --port 3000",
+    "start": "concurrently \"npm run dev\" \"npm run server\""
   },
   "devDependencies": {
     "vite": "^6.3.1"
   },
   "dependencies": {
     "bootstrap": "^5.3.5",
+    "concurrently": "^9.1.2",
+    "json-server": "^0.17.4",
+    "json-server-auth": "^2.1.0",
     "navigo": "^8.11.1"
   }
 }
